crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_expected_fail_multi_indexed.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// expected_fail_multi_indexed.gcl -- Per-tuple-key expected_fail on multi-index assertion
pub index Mode = { Normal, Eco, Boost };
pub index Phase = { Launch, Cruise };

param threshold: Dimensionless[Mode, Phase] = {
    (Mode#Normal, Phase#Launch): 10.0,
    (Mode#Normal, Phase#Cruise): 20.0,
    (Mode#Eco, Phase#Launch): 5.0,
    (Mode#Eco, Phase#Cruise): 15.0,
    (Mode#Boost, Phase#Launch): 50.0,
    (Mode#Boost, Phase#Cruise): 60.0,
};

param actual: Dimensionless[Mode, Phase] = {
    (Mode#Normal, Phase#Launch): 8.0,
    (Mode#Normal, Phase#Cruise): 25.0,
    (Mode#Eco, Phase#Launch): 3.0,
    (Mode#Eco, Phase#Cruise): 10.0,
    (Mode#Boost, Phase#Launch): 55.0,
    (Mode#Boost, Phase#Cruise): 58.0,
};

// Failures: (Normal, Cruise) and (Boost, Launch) -- mark them expected
#[expected_fail((Mode#Normal, Phase#Cruise), (Mode#Boost, Phase#Launch))]
assert within_limits = for m: Mode, p: Phase { @actual[m, p] < @threshold[m, p] };
