crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_format_edge_cases.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// format_edge_cases.gcl -- Edge cases for formatter: long lines, deep nesting, complex expressions
dim GravParam = Length^3 / Time^2;

type Eci {
    Eci,
}
type Body {
    Body,
}

type Vec3<D: Dim, F: Type> {
    Vec3(x: D, y: D, z: D),
}

type StateVec<D: Dim, V: Dim, F: Type> {
    StateVec(pos_x: D, pos_y: D, pos_z: D, vel_x: V, vel_y: V, vel_z: V),
}

index Phase = { Launch, Coast, Burn, Insertion, Deorbit };

index Maneuver = { Departure, Midcourse1, Midcourse2, Correction, Insertion };

index Step = range(0.0 s, 10.0 s, step: 1.0 s);

const node gm_earth: GravParam = 3.986004418e5 km^3/s^2;
const node r_earth: Length = 6371.0 km;

// DAG with long signature (replaces block-body function)
dag compute_transfer_velocity {
    param gm: GravParam;

    param r_departure: Length;

    param r_arrival: Length;

    param inclination_change: Dimensionless;

    node v1: Velocity = sqrt(@gm / @r_departure);

    node v2: Velocity = sqrt(@gm / @r_arrival);

    node dv_hohmann: Velocity = sqrt(
        2.0 * @gm * @r_arrival / (@r_departure * (@r_departure + @r_arrival))
    ) - @v1;

    node dv_plane: Velocity = 2.0 * @v1 * sin(@inclination_change / 2.0);

    node result: Velocity = sqrt(@dv_hohmann ^ 2 + @dv_plane ^ 2);
}

// DAG with short expression body (replaces expression-body function)
dag clamp_dag {
    param x: Dimensionless;

    param lo: Dimensionless;

    param hi: Dimensionless;

    node result: Dimensionless = if @x < @lo { @lo } else { if @x > @hi { @hi } else { @x } };
}

// Deeply nested if-else chain in for comprehension
param phase_priority: Dimensionless[Phase] = for p: Phase {
    if p == Phase#Launch {
        1.0
    } else {
        if p == Phase#Coast {
            2.0
        } else {
            if p == Phase#Burn { 3.0 } else { if p == Phase#Insertion { 4.0 } else { 5.0 } }
        }
    }
};

// Match inside for comprehension with complex arm expressions
param maneuver_dv: Velocity[Phase, Maneuver] = for p: Phase, m: Maneuver {
    match p {
        Phase#Launch => match m {
            Maneuver#Departure => 2.46 km/s,
            Maneuver#Midcourse1 => 0.0 m/s,
            Maneuver#Midcourse2 => 0.0 m/s,
            Maneuver#Correction => 0.0 m/s,
            Maneuver#Insertion => 0.0 m/s,
        },
        Phase#Coast => 0.0 m/s,
        Phase#Burn => match m {
            Maneuver#Departure => 0.0 m/s,
            Maneuver#Midcourse1 => 0.05 km/s,
            Maneuver#Midcourse2 => 0.03 km/s,
            Maneuver#Correction => 0.12 km/s,
            Maneuver#Insertion => 0.0 m/s,
        },
        Phase#Insertion => if m == Maneuver#Insertion { 1.83 km/s } else { 0.0 m/s },
        Phase#Deorbit => 0.0 m/s,
    }
};

// Struct construction with many fields and long expressions
param initial_state: StateVec<Length, Velocity, Eci> = StateVec<Length, Velocity, Eci>(
    pos_x: @r_earth + 200.0 km,
    pos_y: 0.0 km,
    pos_z: 0.0 km,
    vel_x: 0.0 m/s,
    vel_y: sqrt(@gm_earth / (@r_earth + 200.0 km)),
    vel_z: 0.0 m/s,
);

// Field access chains
node initial_pos_x: Length = @initial_state.pos_x;
node initial_vel_y: Velocity = @initial_state.vel_y;

// Phantom-param change via explicit reconstruction with long type name
node state_body: StateVec<Length, Velocity, Body> = StateVec<Length, Velocity, Body>(
    pos_x: @initial_state.pos_x,
    pos_y: @initial_state.pos_y,
    pos_z: @initial_state.pos_z,
    vel_x: @initial_state.vel_x,
    vel_y: @initial_state.vel_y,
    vel_z: @initial_state.vel_z,
);
node body_pos_x: Length = @state_body.pos_x;

// Long binary expression chains
node combined_metric: Dimensionless = (
    @phase_priority[Phase#Launch] + @phase_priority[Phase#Coast] + @phase_priority[Phase#Burn] + @phase_priority[Phase#Insertion] + @phase_priority[Phase#Deorbit]
) / 5.0;

// Scan with complex body
node cumulative_priority: Dimensionless[Phase] = scan(@phase_priority, 0.0, |acc, val| acc + val);

// Unfold with complex body
const node decay_rate: Frequency = 0.5 Hz;
node decay: Dimensionless[Step] = unfold(
    Step,
    100.0,
    |prev_decay, prev_t, t| prev_decay * (1.0 - @decay_rate * (t - prev_t))
);

// DAG for complex result computation
dag compute_complex_result {
    import format_edge_cases::{ gm_earth, r_earth };

    node r1: Length = @r_earth + 200.0 km;

    node r2: Length = @r_earth + 35786.0 km;

    node v1: Velocity = sqrt(@gm_earth / @r1);

    node v2: Velocity = sqrt(@gm_earth / @r2);

    node a_transfer: Length = (@r1 + @r2) / 2.0;

    node v_transfer_at_r1: Velocity = sqrt(@gm_earth * (2.0 / @r1 - 1.0 / @a_transfer));

    node dv1: Velocity = @v_transfer_at_r1 - @v1;

    node v_transfer_at_r2: Velocity = sqrt(@gm_earth * (2.0 / @r2 - 1.0 / @a_transfer));

    node dv2: Velocity = @v2 - @v_transfer_at_r2;

    node result: Velocity = @dv1 + @dv2;
}

import compute_complex_result::{ result as complex_result };

// Aggregations with complex for expressions
node total_dv_all_phases: Velocity = sum(for p: Phase, m: Maneuver { @maneuver_dv[p, m] });

// Multiple attributes on a single declaration
#[lazy]
#[assumes(total_dv_positive)]
node lazy_total: Velocity = @total_dv_all_phases * 1.1;

// Assertions
assert total_dv_positive = @total_dv_all_phases > 0.0 m/s;

assert combined_metric_range = @combined_metric ~= 3.0 +/- 0.01;
