crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_functions.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// functions.gcl -- Phase 6 milestone: DAG blocks replace user-defined functions
dim GravParam = Length^3 / Time^2;

type TransferResult {
    TransferResult(dv1: Velocity, dv2: Velocity, total_dv: Velocity),
}

const node r_earth: Length = 6371.0 km;
const node gm_earth: GravParam = 3.986004418e5 km^3/s^2;

// Non-generic DAG: orbital velocity
dag orbital_velocity {
    param gm: GravParam;

    param r: Length;

    node v: Velocity = sqrt(@gm / @r);
}

// DAG with multiple internal nodes: Hohmann transfer delta-v
dag hohmann_dv {
    param gm: GravParam;

    param r1: Length;

    param r2: Length;

    import functions::{ type TransferResult };

    node v1: Velocity = sqrt(@gm / @r1);

    node v2: Velocity = sqrt(@gm / @r2);

    node dv1: Velocity = sqrt(2.0 * @gm * @r2 / (@r1 * (@r1 + @r2))) - @v1;

    node dv2: Velocity = @v2 - sqrt(2.0 * @gm * @r1 / (@r2 * (@r1 + @r2)));

    node result: TransferResult = TransferResult(dv1: @dv1, dv2: @dv2, total_dv: @dv1 + @dv2);
}

param parking_alt: Length = 200.0 km;
param target_alt: Length = 35786.0 km;

include orbital_velocity(gm: @gm_earth, r: @r_earth + @parking_alt)::{ v as v_parking };
include hohmann_dv(gm: @gm_earth, r1: @r_earth + @parking_alt, r2: @r_earth + @target_alt)::{
    result as transfer
};

// Inline computation replaces generic lerp (generic functions → built-in in Phase 7)
node midpoint_alt: Length = @parking_alt + (@target_alt - @parking_alt) * 0.5;

// Second instantiation of same DAG with namespace alias (validates multi-instantiation)
include orbital_velocity(gm: @gm_earth, r: @r_earth + @parking_alt) as ov2;
node v_check: Velocity = @ov2::v;
