crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_indexed.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// indexed.gcl -- Phase 5 milestone: indexed values
pub index Maneuver = { Departure, Correction, Insertion };

pub index Phase = { Launch, Cruise, Arrival };

param spacecraft_mass: Mass[Phase, Maneuver] = for p: Phase, m: Maneuver {
    match p {
        Phase.Launch => match m {
            Maneuver.Departure => 5000.0 kg,
            Maneuver.Correction => 0.0 kg,
            Maneuver.Insertion => 0.0 kg,
        },
        Phase.Cruise => match m {
            Maneuver.Departure => 0.0 kg,
            Maneuver.Correction => 4500.0 kg,
            Maneuver.Insertion => 0.0 kg,
        },
        Phase.Arrival => match m {
            Maneuver.Departure => 0.0 kg,
            Maneuver.Correction => 0.0 kg,
            Maneuver.Insertion => 4000.0 kg,
        },
    }
};

// default for non-applicable combinations
param spacecraft_mass2: Mass[Phase, Maneuver] = {
    (Phase.Launch, Maneuver.Departure): 5000.0 kg,
    (Phase.Launch, Maneuver.Correction): 0.0 kg,
    (Phase.Launch, Maneuver.Insertion): 0.0 kg,
    (Phase.Cruise, Maneuver.Departure): 0.0 kg,
    (Phase.Cruise, Maneuver.Correction): 4500.0 kg,
    (Phase.Cruise, Maneuver.Insertion): 0.0 kg,
    (Phase.Arrival, Maneuver.Departure): 0.0 kg,
    (Phase.Arrival, Maneuver.Correction): 0.0 kg,
    (Phase.Arrival, Maneuver.Insertion): 4000.0 kg,
};

// default for non-applicable combinations
// Indexed param: delta-v per maneuver
param delta_v: Velocity[Maneuver] = {
    Maneuver.Departure: 2.46 km/s,
    Maneuver.Correction: 0.12 km/s,
    Maneuver.Insertion: 1.83 km/s,
};

// for comprehension: double each delta-v
node double_dv: Velocity[Maneuver] = for m: Maneuver { @delta_v[m] * 2.0 };

// Aggregation: total delta-v
node total_dv: Velocity = sum(for m: Maneuver { @delta_v[m] });

// Aggregation: max delta-v
node max_dv: Velocity = maximum(for m: Maneuver { @delta_v[m] });

// Aggregation: min delta-v
node min_dv: Velocity = minimum(for m: Maneuver { @delta_v[m] });

// Aggregation: mean delta-v
node mean_dv: Velocity = mean(for m: Maneuver { @delta_v[m] });

// Aggregation: count
node n_maneuvers: Dimensionless = count(for m: Maneuver { @delta_v[m] });

// Direct variant access (extracted to param to avoid variant literal in node)
param departure_maneuver: Velocity = @delta_v[Maneuver.Departure];
node departure_dv: Velocity = @departure_maneuver;

// Scan: cumulative delta-v
node cumulative_dv: Velocity[Maneuver] = scan(@delta_v, 0.0 m/s, |acc, val| acc + val);

// Total via sum (replaces generic fn total<D, I>)
node total_check: Velocity = sum(for m: Maneuver { @delta_v[m] });
